--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Vite app</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
+    <h1>Hello World</h1>
   </body>
 </html>
