--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="stylesheet" href="index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite app</title>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <h1 class="title">Hello World</h1>
   </body>
 </html>
