--- a/index.html
+++ b/index.html
@@ -2,12 +2,53 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link rel="stylesheet" href="index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="icon" type="image/svg+xml" href="./images/favicon.svg" />
+    <link rel="stylesheet" href="./sass/index.scss" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite app</title>
   </head>
   <body>
-    <h1 class="title">Hello World</h1>
+    <header class="header">
+      <div class="container container-header">
+        <img src="./images/logo.png" alt="logo" />
+        <div class="menu-button-container">
+          <svg class="menu-button__icon" width="28" height="28">
+            <use href="./images/sprite.svg#icon-gg_menu"></use>
+          </svg>
+          <nav class="menu-container">
+            <ul class="list-menu">
+              <li class="list-menu__item current">
+                <a class="list-menu__link" href="./index.html">Home</a>
+              </li>
+              <li class="list-menu__item">
+                <a class="list-menu__link" href="">About</a>
+              </li>
+              <li class="list-menu__item">
+                <a class="list-menu__link" href="">Service</a>
+              </li>
+              <li class="list-menu__item">
+                <a class="list-menu__link" href="">Menu</a>
+              </li>
+              <li class="list-menu__item">
+                <a class="list-menu__link" href="">Contacts</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </header>
+    <main>
+      <section class="hero">
+        <div class="container container-hero"></div>
+      </section>
+    </main>
+
+    <script src="./index.js" type="module"></script>
   </body>
 </html>
