--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
   <body>
     <header class="header">
       <div class="container container-header">
-        <img src="./images/logo.png" alt="logo" />
+        <a href="./index.html">
+          <img src="./images/logo.png" alt="logo" />
+        </a>
         <div class="menu-button-container">
           <svg class="menu-button__icon" width="28" height="28">
             <use href="./images/sprite.svg#icon-gg_menu"></use>
@@ -45,7 +47,38 @@
     </header>
     <main>
       <section class="hero">
-        <div class="container container-hero"></div>
+        <div class="container container-hero">
+          <h1 class="hero__title">Enjoy Your Favorite Food From Anywhere</h1>
+          <p class="hero__description">
+            With just a few clicks, you can have your favorite meals delivered
+            straight to your doorstep, no matter where you are. Order now and
+            enjoy a hassle-free and delicious meal from the comfort of your own
+            home.
+          </p>
+          <button class="hero__button">Order Now</button>
+        </div>
+      </section>
+      <section class="offering">
+        <div class="container container-offering">
+          <img class="offering__img-apple" src="./images/apple-mobile-offering.png" alt="apple" />
+          <h2>What’s Special About Our Offerings</h2>
+          <p>
+            With our platform, you can browse through a diverse selection of
+            cuisines and local restaurants, and choose from a variety of dishes
+            that cater to your specific taste buds.
+          </p>
+          <h3>Fasest Delivery</h3>
+          <p>
+            Our advanced logistics system and dedicated delivery partners ensure
+            that your meals are delivered to you within 30-minutes.
+          </p>
+          <h3>Easy to order</h3>
+          <p>
+            You can browse through a wide variety of cuisines and restaurants,
+            select your favorite meals, and place your order in just a few
+            clicks.
+          </p>
+        </div>
       </section>
     </main>
 
